app/assets/stylesheets/public.scss
/* ... */
html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
body {
  background-image: image-url("logo-foto2-medium.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center center;
  margin: 0;
}




.js div#preloader {
    position: fixed;
    left: 0;
    top: 0;
    z-index: 10000;
    width: 100%;
    height: 100%;
    overflow: visible;
    background: #181818;

}

#camera-retro{

    display:table-cell;
    font-size: 5em;
    vertical-align: middle;
    text-align:center;

}

.no-js #preloader {
        display: none;
    }




.onepage-padding{

  padding-top:50vh;
  padding-bottom:50vh;
}

#CoverTitle{

  font-family: Arial;
  font-size: 10em;
  font-size: 10vw;
  text-align: center;
  letter-spacing: -0.1em;
  word-spacing: 0.1em;
  padding-top: 40vh;
  padding-bottom: 40vh;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;

}

.ColumnContent{

  text-align: justify;

}

.GalleryLSS{

  width:80%;
  margin-left: 10%;
  margin-top: 2.5%;
  border-collapse: separate;
  border-spacing: 10px;
}

#MonografijaOuter{

    background-color: #D0D0D0;
    color: #181818;
    text-align: justify;
}

#TamnaKomoraOuter{

  background-color: #FF6600;
  color: #181818;
  text-align: justify;
}

/*@media (min-width: 768px){
  #PrijaveOuter{
  background: linear-gradient(90deg, #d0d0d0 50%, #ff6600 50%);
  color: #181818;

  }
}*/

@media (max-width: 991px){
  
  .body{
    background-image: image-url("logo-foto2-medium-mobile.jpg");
  }
  
  #PrijaveOuter{
    background: linear-gradient(180deg, #d0d0d0 50%, #ff6600 50%);
    color: #181818;
  }

  #PrijavaTecajContainer{
    background-color: #d0d0d0;
  }

  #PrijavaRadionicaContainer{
    background-color: #ff6600;
  }

  .onepage-padding{

    padding-top: 15vh;
    padding-bottom: 15vh;

  }

  #TamnaKomoraOuter{

  background-color: #FF6600;
  color: #181818;
  text-align: justify;
    }

  #contact-info-wrapper{

    background-color: #181818;
    color: #ff6600;

    }
}



#lijevo{

  background-color: #181818;
  overflow: hidden;
}

#sredina{

  background-image: image-url("ivona_1_blur.jpg");
  background-size: cover;
  overflow: hidden;
}

#desno{

  background-color: #3a579d;
  background-size: cover;
  overflow:hidden;
}

#lijevo:hover,#lijevo:focus, #sredina:hover, #sredina:focus, #desno:hover, #desno.focus {

  z-index: 100;
  box-shadow: 5px 5px 15px 1px #181818, -5px 5px 15px -1px #181818 ;
  transition: all .5s ease-out;
  -moz-transition: all .5s ease-out;
  -webkit-transition: all .5s ease-out;
  -o-transition: all .5s ease-out;

}

@media (min-width: 992px){

  #FollowUsFooterWrapper{

    background: linear-gradient(90deg, #181818 50%, #3a579d 50%);
  }

}


.img-fadein{

  opacity: 0.65;
  box-shadow: 0px 5px 5px 1px #080808;
  transition: all .5s ease-out;
  -moz-transition: all .5s ease-out;
  -webkit-transition: all .5s ease-out;
  -o-transition: all .5s ease-out;
}

.img-fadein:hover,.img-fadein:focus{

  opacity: 1;
  box-shadow: 0px 5px 5px 1px #101010;
}

#BackToTop{

  background-color: #D0D0D0;
  border-radius: 5px;
  position: fixed;
  bottom: 30px;
  right: 30px;
  z-index: 1000;
  display: none;

}

#TecajContainer{

  width: 100%;
}

#RadionicaContainer{

  width: 100%;
}

#TecajModalButton{

  position: fixed;
  left: -100vw;
  top: 25%;
  height: 50%;
  z-index: 1000;
  /*display:none;*/
}

#RadionicaModalButton{

  position: fixed;
  right: -100vw;
  top: 25%;
  height: 50%;
  z-index: 1000;
  background-color: #ff6600;
  padding: 1%;
  /*display:none;*/
}

#contact-info-wrapper{

    background-color: #181818;
    color: #ff6600;

}

#become-a-photowan{

    background-color: rgba(255, 255, 255, 0.15);
    color: #d0d0d0;

}



*{

  /*border: 1px solid white;*/

}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
  display: block;
}
audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
[hidden],
template {
  display: none;
}
a {
  background-color: transparent;
}
a:active,
a:hover {
  outline: 0;
}
abbr[title] {
  border-bottom: 1px dotted;
}
b,
strong {
  font-weight: bold;
}
dfn {
  font-style: italic;
}
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
mark {
  background: #ff0;
  color: #000;
}
small {
  font-size: 80%;
}
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sup {
  top: -0.5em;
}
sub {
  bottom: -0.25em;
}
img {
  border: 0;
}
svg:not(:root) {
  overflow: hidden;
}
figure {
  margin: 1em 40px;
}
hr {
  -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
  height: 0;
}
pre {
  overflow: auto;
}
code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
button,
input,
optgroup,
select,
textarea {
  color: inherit;
  font: inherit;
  margin: 0;
}
button {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}
button[disabled],
html input[disabled] {
  cursor: default;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}
input {
  line-height: normal;
}
input[type="checkbox"],
input[type="radio"] {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 0;
}
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}
input[type="search"] {
  -webkit-appearance: textfield;
  -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
}
/* ... */

